--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -7,8 +7,8 @@
     <!-- DATA binding - to bind overview model -->
     <data>
         <variable
-            name="viewModel"
-            type="com.example.android.marsphotos.overview.OverviewViewModel" />
+            name="photo"
+            type="com.example.android.marsphotos.network.MarsPhoto" />
     </data>
 
     <ImageView
@@ -19,5 +19,5 @@
         android:padding="2dp"
         android:scaleType="fitXY"
         tools:src="@tools:sample/backgrounds/scenic"
-        app:imageUrl="@{viewModel.photos.imgSrcUrl}" />
+        app:imageUrl="@{photo.imgSrcUrl}" />
 </layout>
