--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -43,6 +43,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:listData="@{viewModel.photos}"
+            android:clipToPadding="false"
             app:spanCount="2"
             tools:itemCount="16"
             tools:listitem="@layout/grid_view_item"
